updated credit card alignment issue

--- a/docroot/themes/cypress_store/css/style.css
+++ b/docroot/themes/cypress_store/css/style.css
@@ -8080,8 +8080,9 @@ footer .region-footer .footer-block .footer-menu .copyright {
 .layout-region-checkout-secondary .view-footer {
   clear: both;
 }
-.float-labels-wrapper .float-labels-item {
-  margin-top: 15px;
+.credit-card-form__divider {
+  margin: 0.5em 0.5em 0 0.5em;
+  font-size: 1.5em;
 }
 /*end checkout*/
 /*start address book*/
@@ -8520,6 +8521,10 @@ footer .region-footer .footer-block .footer-menu .copyright {
     vertical-align: top;
   }
   /*end footer styles responsive*/
+  /*product page*/
+  .path-product .field--name-field-files-ref {
+    word-wrap: break-word;
+  }
   /*start delivery address styles*/
   .block-views-blockdelivery-address-block-1 {
     /*margin-top: 50px;*/
